<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/like_view"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/like_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <TextView
            android:id="@+id/like_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/like_count"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/like_view"
            app:layout_constraintRight_toLeftOf="@id/user_count"
            app:layout_constraintTop_toTopOf="@id/like_view" />

        <TextView
            android:id="@+id/user_count"
            android:text="@string/user_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/like_view"
            app:layout_constraintLeft_toRightOf="@+id/like_title"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/like_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="@id/like_view"
            app:layout_constraintRight_toRightOf="@id/like_view"
            app:layout_constraintTop_toBottomOf="@id/like_title"
            tools:listitem="@layout/item_like" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like_view">

        <TextView
            android:id="@+id/chat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/conversas"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/chat_view"
            app:layout_constraintRight_toRightOf="@id/chat_view"
            app:layout_constraintTop_toTopOf="@id/chat_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="@id/chat_view"
            app:layout_constraintRight_toRightOf="@id/chat_view"
            app:layout_constraintTop_toBottomOf="@id/chat_title"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_chat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMaxWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/chat_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabGravity="fill"
        app:tabMode="fixed"
        android:background="@color/white"
        app:tabTextColor="@color/teal_700"
        app:tabIndicatorColor="@color/teal_200">

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conversas"
        />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>